menos cache y log

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,7 +38,7 @@
                 </div>
 
                 <hgroup>
-                    <h2>{% block blog_title %}<a href="#">Mi blog</a>{% endblock %}</h2>
+                    <h2>{% block blog_title %}<a href="#">Tecnoblog</a>{% endblock %}</h2>
                     <h3>{% block blog_tagline %}<a href="#">blog de tecnología</a>{% endblock %}</h3>
                 </hgroup>
             </header>
@@ -52,7 +52,7 @@
 
             <div id="footer">
                 {% block footer %}
-                    Prototipo Symfony2 - <a href="https://github.com/murilloarturo/Symfony2">Download</a>
+                    Prototipo Symfony - <a href="https://github.com/murilloarturo/Symfony2">Download</a>
                 {% endblock %}
             </div>
         </section>
